--- a/app-extension/package.json
+++ b/app-extension/package.json
@@ -12,7 +12,7 @@
   "bugs": "https://github.com/eliecer2000/q-dynamic-form/issues",
   "homepage": "https://github.com/eliecer2000/q-dynamic-form",
   "dependencies": {
-    "quasar-ui-q-dynamic-form": "latest"
+    "quasar-ui-q-dynamic-form": "^0.0.1"
   },
   "engines": {
     "node": ">= 8.9.0",
