--- a/ui/package.json
+++ b/ui/package.json
@@ -46,8 +46,9 @@
     "zlib": "^1.0.5"
   },
   "dependencies": {
-    "@vue/compiler-sfc": "^3.1.4",
+    "@vue/compiler-sfc": "^3.2.37",
     "rollup-plugin-vue": "^6.0.0",
+    "vue": "^3.2.37",
     "vue-draggable-next": "^2.1.1"
   },
   "browserslist": [
