--- a/ui/package.json
+++ b/ui/package.json
@@ -1,65 +1,62 @@
 {
-	"name": "quasar-ui-q-dynamic-form",
-	"version": "0.0.5",
-	"author": "Eliezer Rangel <eliezer.rangel@escala24x7.com>",
-	"description": "Quasar Dynamic Form",
-	"license": "MIT",
-	"module": "src/index.esm.js",
-	"main": "src/index.common.js",
-	"scripts": {
-		"dev": "cd dev && yarn dev && cd ..",
-		"dev:umd": "yarn build && node build/script.open-umd.js",
-		"dev:ssr": "cd dev && yarn 'dev:ssr' && cd ..",
-		"dev:ios": "cd dev && yarn 'dev:ios' && cd ..",
-		"dev:android": "cd dev && yarn 'dev:android' && cd ..",
-		"dev:electron": "cd dev && yarn 'dev:electron' && cd ..",
-		"build": "node build/index.js",
-		"build:js": "node build/script.javascript.js",
-		"build:css": "node build/script.css.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/eliecer2000/q-dynamic-form"
-	},
-	"bugs": "https://github.com/eliecer2000/q-dynamic-form/issues",
-	"homepage": "https://github.com/eliecer2000/q-dynamic-form",
-	"devDependencies": {
-		"chalk": "^4.1.0",
-		"@quasar/app-webpack": "3.5.3",
-		"@quasar/extras": "^1.14.0",
-		"@rollup/plugin-buble": "^0.21.3",
-		"@rollup/plugin-json": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^13.3.0",
-		"@rollup/plugin-replace": "^4.0.0",
-		"autoprefixer": "^10.4.7",
-		"core-js": "^3.23.1",
-		"cssnano": "^5.1.11",
-		"fs-extra": "^10.1.0",
-		"open": "^8.4.0",
-		"postcss": "^8.4.14",
-		"quasar": "^2.7.1",
-		"rimraf": "^3.0.2",
-		"rollup": "^2.75.6",
-		"rtlcss": "^3.5.0",
-		"sass": "1.52.3",
-		"uglify-js": "^3.16.0",
-		"zlib": "^1.0.5",
-		"vue-draggable-next": "^2.1.1"
-	},
-	"dependencies": {
-		"@vue/compiler-sfc": "^3.2.37",
-		"rollup-plugin-vue": "^6.0.0",
-		"vue": "^3.2.37",
-		"vue-draggable-next": "^2.1.1"
-	},
-	"browserslist": [
-		"last 4 Chrome versions",
-		"last 4 Firefox versions",
-		"last 2 Edge versions",
-		"last 4 Safari versions",
-		"last 4 Android versions",
-		"last 4 ChromeAndroid versions",
-		"last 4 FirefoxAndroid versions",
-		"last 4 iOS versions"
-	]
+  "name": "quasar-ui-q-dynamic-form",
+  "version": "0.0.5",
+  "author": "Eliezer Rangel <eliezer.rangel@escala24x7.com>",
+  "description": "Quasar Dynamic Form",
+  "license": "MIT",
+  "module": "src/index.esm.js",
+  "main": "src/index.common.js",
+  "scripts": {
+    "dev": "cd dev && yarn dev && cd ..",
+    "dev:umd": "yarn build && node build/script.open-umd.js",
+    "dev:ssr": "cd dev && yarn 'dev:ssr' && cd ..",
+    "dev:ios": "cd dev && yarn 'dev:ios' && cd ..",
+    "dev:android": "cd dev && yarn 'dev:android' && cd ..",
+    "dev:electron": "cd dev && yarn 'dev:electron' && cd ..",
+    "build": "node build/index.js",
+    "build:js": "node build/script.javascript.js",
+    "build:css": "node build/script.css.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eliecer2000/q-dynamic-form"
+  },
+  "bugs": "https://github.com/eliecer2000/q-dynamic-form/issues",
+  "homepage": "https://github.com/eliecer2000/q-dynamic-form",
+  "devDependencies": {
+    "autoprefixer": "^10.0.2",
+    "cssnano": "^4.1.10",
+    "postcss": "^8.1.9",
+    "rtlcss": "^2.6.1",
+    "sass": "1.32.0",
+    "quasar": "^2.0.0",
+    "@quasar/extras": "^1.0.0",
+    "core-js": "^3.0.0",
+    "@quasar/app-webpack": "^3.0.0",
+    "open": "^7.3.0",
+    "fs-extra": "^8.1.0",
+    "chalk": "^4.1.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^2.45.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2",
+    "uglify-js": "^3.13.3",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0",
+    "zlib": "^1.0.5",
+    "vue-draggable-next": "^2.1.1",
+    "@vue/compiler-sfc": "^3.2.37"
+  },
+  "browserslist": [
+    "last 4 Chrome versions",
+    "last 4 Firefox versions",
+    "last 2 Edge versions",
+    "last 4 Safari versions",
+    "last 4 Android versions",
+    "last 4 ChromeAndroid versions",
+    "last 4 FirefoxAndroid versions",
+    "last 4 iOS versions"
+  ]
 }
