--- a/ui/package.json
+++ b/ui/package.json
@@ -24,30 +24,32 @@
   "bugs": "https://github.com/eliecer2000/q-dynamic-form/issues",
   "homepage": "https://github.com/eliecer2000/q-dynamic-form",
   "devDependencies": {
-    "autoprefixer": "^10.0.2",
-    "cssnano": "^4.1.10",
-    "postcss": "^8.1.9",
-    "rtlcss": "^2.6.1",
-    "sass": "1.32.0",
-    "quasar": "^2.0.0",
-    "@quasar/extras": "^1.0.0",
-    "core-js": "^3.0.0",
     "@quasar/app-webpack": "^3.0.0",
-    "open": "^7.3.0",
-    "fs-extra": "^8.1.0",
-    "chalk": "^4.1.0",
-    "rimraf": "^3.0.0",
-    "rollup": "^2.45.0",
+    "@quasar/extras": "^1.0.0",
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
+    "@vue/compiler-sfc": "^3.2.37",
+    "autoprefixer": "^10.0.2",
+    "chalk": "^4.1.0",
+    "core-js": "^3.0.0",
+    "cssnano": "^4.1.10",
+    "dotenv": "^16.0.1",
+    "fs-extra": "^8.1.0",
+    "open": "^7.3.0",
+    "postcss": "^8.1.9",
+    "quasar": "^2.0.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^2.45.0",
+    "rtlcss": "^2.6.1",
+    "sass": "1.32.0",
     "uglify-js": "^3.13.3",
     "vue": "^3.0.0",
+    "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.0.0",
     "zlib": "^1.0.5",
-    "vue-draggable-next": "^2.1.1",
-    "@vue/compiler-sfc": "^3.2.37"
+    "@quasar/quasar-app-extension-dotenv": "^1.1.0"
   },
   "browserslist": [
     "last 4 Chrome versions",
